--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,4 +22,8 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.3'
+    compile 'com.mikepenz.iconics:library:0.7.5@aar'
+    compile('com.mikepenz.materialdrawer:library:1.0.2@aar') {
+        transitive = true
+    }
 }
